# SayGG-Panel

./: .env.example  .gitignore  .replit  MIGRATION_MAPPING.md  README.md  package-lock.json  package.json  replit.md  seed.ts  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
Key-Panel/: config.json  db.php  error_log
Key-Panel/app/Config/: App.php  Constants.php  Database.php  Filters.php  Routes.php
Key-Panel/app/Controllers/: Auth.php  Authold.php  Connect.php  Keys.php  Price.php  User.php  Userpass.php  Usersix.php  apiserver.php
Key-Panel/app/Filters/: AdminFilter.php  LoginDeviceGuard.php  RateLimitFilter.php
Key-Panel/app/Libraries/: LoginThrottle.php  Telegram.php
Key-Panel/app/Models/: KeysModel.php  LoginThrottleModel.php  PriceModel.php  PriceModel.php.bak  UserModel.php
Key-Panel/app/Views/Admin/: account_approve.php  balance.php  license.php  referral.php  user_edit.php  user_edit.php.bak  users.php
Key-Panel/app/Views/Auth/: conn.php  device-reset.php  forgot-password.php  login.php  otp.php  register.php  reset-password.php
Key-Panel/app/Views/Keys/: generate.php  generate_random.php  key_edit.php  list.php
Key-Panel/app/Views/Layout/: Header.php  Starter.php  msgStatus.php
Key-Panel/app/Views/Price/: index.php
Key-Panel/app/Views/Server/: ExtendDuration.php  Server.php  lib.php  settingsx.php
Key-Panel/app/Views/User/: conn.php  dashboard.php  settings.php  settings.php.bak  twofa.php
api/: app.ts  index.ts
attached_assets/: Login_1774518373146.h
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: layout.tsx  theme-provider.tsx
client/src/components/ui/: alert-dialog.tsx  badge.tsx  dialog.tsx  drawer.tsx  radio-group.tsx  scroll-area.tsx  sheet.tsx  sidebar.tsx  slider.tsx  switch.tsx
client/src/hooks/: use-site-name.ts
client/src/lib/: auth.tsx  currency.ts  device.ts  useWebSocket.ts
client/src/pages/: api-generator.tsx  balance.tsx  connect-config.tsx  dashboard.tsx  device-reset.tsx  forgot-password.tsx  game-durations.tsx  games.tsx  generate.tsx  keys.tsx  login.tsx  not-found.tsx  prices.tsx  profile.tsx  referrals.tsx  register.tsx  settings.tsx  setup.tsx  users.tsx
docs/: connect-integration.md  expo-test-app.md  multi-game-management.md
expo-test-app/: app.json  package.json
expo-test-app/src/: App.tsx
loader/: Android.mk  CMakeLists.txt  Login.cpp  Login.h  json.hpp
loader/java/com/keypanel/loader/: Login.java
migrations/: 0000_silent_paper_doll.sql
migrations/meta/: 0000_snapshot.json  _journal.json
proxy/: cloudflare-worker.js  nginx.conf
script/: build-vercel.ts
server/: app.ts  auth.ts  bootstrap.ts  index.ts  migrate.ts  routes.ts  storage.ts  vite.ts  websocket.ts
shared/: schema.ts
